<resources>
    <string name="app_name">Sea Connector (Candidate)</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="login">Login</string>
    <string name="hint_indos_no">Indos Number</string>
    <string name="hint_password">Password</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="btn_sign_in">Sign In</string>
    <string name="powered_by_interlink_consultant"><b>Powered By</b> Interlink Consultant</string>
    <string name="no_internet">Please Check Internet Connection</string>
    <string name="menu_home">Dashboard</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="err_msg_name">Enter your Indos Number</string>
    <string name="something_wrong">Something Worng! \nPlease Try again Later.</string>
    <string name="register">Register</string>
    <string name="firstname">First Name</string>
    <string name="dob">Date Of Birth</string>
    <string name="email">Email</string>
    <string name="mobile">Mobile No.</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="city">City</string>
    <string name="country">Country</string>
    <string name="state">State</string>
    <string name="gender">Gender</string>
    <string name="pincode">Pincode</string>
    <string name="middle_name">Middle Name</string>
    <string name="last_name">Last Name</string>
    <string name="address">Address</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="want_to_logout">Are you sure you want to Logout?</string>
    <string name="some_logout_text">If you logout we will not able to show you latest products.</string>
    <string name="still_not_connected_register">New to SeaConnector?</string>
    <string name="email_id">Email Address</string>
    <!--Job Post String-->
    <string name="new_job">New Job Post</string>
    <string name="name">Job Name *</string>
    <string name="rank">Rank *</string>
    <string name="ship">Vessel Type *</string>
    <string name="location">Job Location *</string>
    <string name="cancel"><u>Cancel</u></string>
    <string name="department">Department *</string>
    <string name="startDate">Post Start Date *</string>
    <string name="endDate">Post Expiry Date *</string>
    <string name="salary">Salary *</string>
    <string name="employementtype">Employment Type *</string>
    <string name="experieceType">Work Experience *</string>

    <string name="job_desc">Job Description *</string>
    <string name="job_opening">Job Opening *</string>
    <string name="retry">Retry</string>
    <string name="rupee_icon">₹</string>
    <string name="more_details"><u>More Details</u></string>
    <string name="label_opening">Openings :</string>
    <string name="apply">Apply</string>
    <string name="alreayd_have_an_account">Already have an account ?</string>

    <string name="large_text">Marine engineer who has sailed on ships and has complete technical
        expertise of ships engines and generators operations,
        fuelling operations Detailed engine performance record and monitoring</string>
    <string name="presrnt_add">Plot no, Trapinex House, 203, 5, Sholapur St,\nnear Dazzel Restaurant, Chinchbunder,\nMumbai, Maharashtra 400009</string>
    <string name="or">or</string>
    <string name="login_in">Log in</string>
    <string name="forgot_password_yv">Forgot Password?</string>
    <string name="send_otp">Send OTP</string>
    <string name="verify_otp">Enter verification Code</string>
    <string name="otp_text">Enter 6 digit number that we sent you.</string>
    <string name="resend_otp">Resend OTP?</string>

    <string name="create_new_password">Create New Password</string>
    <string name="new_password">New Password</string>
    <string name="create_password">Create Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cdc_number">CDC Number</string>
    <string name="menu_jobs">My Jobs</string>
    <string name="menu_profile">Profile</string>
    <string name="trading_area">Trading Area</string>
    <string name="vessel_type">Vessel Type</string>
    <string name="rank_type">Rank</string>
    <string name="department_type">Department</string>
    <string name="salary_range">Expected Salary</string>
    <string name="basic_info">Basic Info</string>
    <string name="job_title">Job Tilte</string>
    <string name="describe_family"><![CDATA[Tell us about your family? [No. of family members, do you stay with them? Your relationship with them? Who are you closest to & why?]]></string>
    <string name="family_describtion_text"><![CDATA[Family members can be related by birth, marriage, or adoption. Your immediate family includes parents, siblings, spouse, and children. And your extended family includes people you are related to, such as grandparents, cousins, aunts & uncles, nephews, nieces etc.]]></string>
    <string name="skill_question">Are there any key areas in your job profile that you give more focus to? What activities do you undertake to bring constant improvements in these key areas ? [Such as: Taking online courses, networking, personality development, communication skill etc.]</string>
    <string name="record_not_found">Record not found</string>
    <string name="expected_salary">Expected Salary</string>
    <string name="min_salary">Min Salary</string>
    <string name="max_salary">Max Salary</string>
    <string name="status">Status</string>
    <string name="current_salary">Current Salary</string>
    <string name="expected_sal">Expected Salary</string>
    <string name="prefrence">Any other preference</string>
    <string name="shipsize">Size of Ship</string>
    <string name="shipage">Age of Ship</string>
    <string name="food">Food</string>
    <string name="family_carriage">Family Carriage</string>
    <string name="salary_hint">Salary</string>
    <string name="promotion">Promotion</string>
    <string name="vacation">Vacation</string>
    <string name="regular_employment">Regular Employment</string>
    <string name="ship_name">Ship Name</string>
    <string name="total_experience">Total Experience</string>
    <string name="full_experience">Full Experience</string>
    <string name="engine_hint">Engine Type</string>
    <string name="enginepower_hint">Engine Power</string>
    <string name="fromdate">From Date</string>
    <string name="todate">To Date</string>
    <string name="total_time">Total Time (Month)</string>
    <string name="reason_stickback">Reason to stick back in Same ship type</string>
    <string name="reason_change">Reason to change (if any)</string>
    <string name="circumtance">Under what circumstances you ask for sign off?</string>
    <string name="signed_off">Have you ever signed off due to medical reasons?</string>
    <string name="surgery">Have you ever undergone any surgery?</string>
    <string name="major_achivement">Any Major achievements in last company?</string>
    <string name="add_exp">Add Expereince</string>
    <string name="rank_applied">Rank applied for*</string>
    <string name="log_in_to_your_account">Log in to your account</string>
    <string name="sign_up_hint">Sign up</string>

    <string-array name="status">
        <item>-Please Select Status-</item>
        <item>Fresher</item>
        <item>Experience</item>
    </string-array>

    <string-array name="months">
        <item>-Please Select-</item>
        <item>3 months</item>
        <item>6 months</item>
        <item>9 months</item>
    </string-array>


    <!-- TODO - add your ad unit Ids -->
    <!-- AdMob ad unit IDs -->
    <string name="admob_app_id">ca-app-pub-9216677913475079~5641711517</string>
    <string name="banner_home_footer">ca-app-pub-9216677913475079/9006241450</string>
</resources>