<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_find_jobs"
            android:icon="@drawable/search_job"
            android:title="Find Job" />
     <item
            android:id="@+id/nav_my_jobs"
            android:icon="@drawable/saved_jobs"
            android:title="@string/menu_jobs" />
        <item

            android:id="@+id/nav_proifle"
            android:icon="@drawable/ic_baseline_person_outline"
            android:title="@string/menu_profile" />
    </group>
</menu>