<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.seajobnowcandidate.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/home_fragment" />
    <fragment
        android:id="@+id/nav_find_jobs"
        android:name="com.example.seajobnowcandidate.ui.searchjob.PostJobFragment"
        android:label="Find Jobs"
        tools:layout="@layout/fragment_postjob" />
    <fragment
        android:id="@+id/nav_my_jobs"
        android:name="com.example.seajobnowcandidate.ui.myjobs.MyJobFragment"
        android:label="@string/menu_jobs"
        tools:layout="@layout/my_job_fragment" />

    <fragment
        android:id="@+id/nav_proifle"
        android:name="com.example.seajobnowcandidate.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/profile_fragment" />
</navigation>