<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity.RegisterActivity"
    android:fillViewport="true"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <View
        android:layout_width="match_parent"
        android:layout_height="25dp"/>
        <TextView
            style="@style/TitleTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/register"
            android:textColor="@color/blue_500"
            android:textSize="25sp"
            android:textStyle="bold" />
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:orientation="vertical">
        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="left">
         <RadioButton
             android:id="@+id/indosNoRadioButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:hint="@string/hint_indos_no"
             android:layout_gravity="left"
             android:buttonTint="@color/blue_500"
             android:checked="true"
             android:textColor="@color/black"/>
         <RadioButton
             android:id="@+id/cdcRadioButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:hint="@string/cdc_number"
             android:buttonTint="@color/blue_500"
             android:textColor="@color/black"/>
        </RadioGroup>

      <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_indosno"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            app:endIconMode="clear_text"
          app:errorIconDrawable="@drawable/ic_baseline_error_outline"
          app:errorTextColor="@color/red_400"
            app:startIconDrawable="@drawable/indosicon">

          <com.google.android.material.textfield.TextInputEditText
              android:id="@+id/input_indosno"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:hint=""
              android:maxLines="1" />
      </com.google.android.material.textfield.TextInputLayout>

      <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_first_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            app:endIconMode="clear_text"
          app:errorIconDrawable="@drawable/ic_baseline_error_outline"
          app:errorTextColor="@color/red_400"
          app:startIconDrawable="@drawable/ic_baseline_person_outline">
    <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/input_first_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/firstname"
             android:inputType="text"
             android:maxLines="1"/>
     </com.google.android.material.textfield.TextInputLayout>
      <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/input_layout_middle_name"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="15dp"
             app:endIconMode="clear_text"
          app:errorIconDrawable="@drawable/ic_baseline_error_outline"
          app:errorTextColor="@color/red_400"
             app:startIconDrawable="@drawable/ic_baseline_person_outline">
     <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/input_middle_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/middle_name"
             android:inputType="text"
             android:maxLines="1"/>
     </com.google.android.material.textfield.TextInputLayout>
       <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/input_layout_last_name"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="15dp"
           app:errorIconDrawable="@drawable/ic_baseline_error_outline"
           app:errorTextColor="@color/red_400"
             app:endIconMode="clear_text"
            app:startIconDrawable="@drawable/ic_baseline_person_outline">
     <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/input_last_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/last_name"
             android:inputType="text"
             android:maxLines="1"/>
   </com.google.android.material.textfield.TextInputLayout>
      <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/input_layout_dob"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="15dp"
             app:endIconMode="clear_text"
          app:errorIconDrawable="@drawable/ic_baseline_error_outline"
          app:errorTextColor="@color/red_400"
             app:startIconDrawable="@drawable/ic_date_of_birth">
      <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/input_dob"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/dob"
             android:focusable="false"
             android:clickable="true" />
   </com.google.android.material.textfield.TextInputLayout>

     <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/input_layout_email"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="15dp"
             app:endIconMode="clear_text"
         app:errorIconDrawable="@drawable/ic_baseline_error_outline"
         app:errorTextColor="@color/red_400"
             app:startIconDrawable="@drawable/ic_baseline_alternate_email_24">
     <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/input_email"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/email"
             android:maxLines="1"
             android:inputType="textEmailAddress" />
 </com.google.android.material.textfield.TextInputLayout>

     <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/input_layout_mobile"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="15dp"
             app:endIconMode="clear_text"
         app:errorIconDrawable="@drawable/ic_baseline_error_outline"
         app:errorTextColor="@color/red_400"
             app:startIconDrawable="@drawable/ic_baseline_mobile_friendly_24">
     <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/input_mobile"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/mobile"
             android:maxLines="1"
             android:maxLength="10"
             android:inputType="number" />
 </com.google.android.material.textfield.TextInputLayout>

     <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            app:endIconMode="clear_text"
         app:errorIconDrawable="@drawable/ic_baseline_error_outline"
         app:errorTextColor="@color/red_400"
           app:startIconDrawable="@drawable/lock">
       <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/input_password"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/password"
             android:maxLines="1"
             android:inputType="textPassword"/>
     </com.google.android.material.textfield.TextInputLayout>

     <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/input_layout_confirm_password"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="15dp"
             app:endIconMode="clear_text"
         app:errorIconDrawable="@drawable/ic_baseline_error_outline"
         app:errorTextColor="@color/red_400"
             app:startIconDrawable="@drawable/lock">
      <com.google.android.material.textfield.TextInputEditText
              android:id="@+id/input_confirm_password"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:hint="@string/confirm_password"
              android:maxLines="1"
              android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>
   <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_address"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            app:endIconMode="clear_text"
            app:helperText="(optional)"
            app:startIconDrawable="@drawable/ic_baseline_location_on_24">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/address"
                android:maxLines="3"/>
        </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout_country"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                app:helperText="(optional)"
                app:helperTextEnabled="true">
                <AutoCompleteTextView
                    android:id="@+id/spnCountry"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/country" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout_state"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                app:helperText="(optional)"
                app:helperTextEnabled="true">
                <AutoCompleteTextView
                    android:id="@+id/spnState"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/state" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputspnCity"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                app:helperText="(optional)">
                <AutoCompleteTextView
                    android:id="@+id/spnCity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/city" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout_pincode"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                app:endIconMode="clear_text"
                app:helperText="(optional)"
                app:startIconDrawable="@drawable/ic_baseline_pin_drop_24">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_pincode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/pincode"
                    android:maxLines="1"
                    android:maxLength="6"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_sign_up"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:gravity="center"
            android:text="@string/btn_sign_up"
            android:textAllCaps="true"
            android:textColor="#FFF"
            android:textSize="15sp"
            android:textStyle="bold"
            app:cornerRadius="5dp"
            android:padding="5dp"/>

        <TextView
            style="@style/TitleTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/or"
            android:textColor="@color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">

            <ImageView
                android:id="@+id/btnGoogle"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:src="@drawable/google" />

            <ImageView
                android:id="@+id/btnFacebook"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:src="@drawable/facebook" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center|bottom"
            android:gravity="center|bottom"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">
            <TextView
                android:id="@+id/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:gravity="center"
                style="@style/ContentTextView"
                android:text="@string/alreayd_have_an_account" />

            <TextView
                android:id="@+id/text_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:gravity="center"
                android:clickable="true"
                android:paddingStart="5dp"
                style="@style/MediumContent"
                android:text="@string/login_in" />
        </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</ScrollView>